--- a/Jiu Jitsu Assistant/Roll.xaml
+++ b/Jiu Jitsu Assistant/Roll.xaml
@@ -13,85 +13,87 @@
         Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
         Height="800px" Width="1300px"
         Name="mindmaps_window">
-   <Grid>
-      <Grid.ColumnDefinitions>
-         <ColumnDefinition Width="400"/>
-         <ColumnDefinition Width="*"/>
-         <ColumnDefinition Width="900" Name="gameplayColumn" />
-      </Grid.ColumnDefinitions>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="400"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="900" Name="gameplayColumn" />
+        </Grid.ColumnDefinitions>
 
-      <Label x:Name="label1" Content="Settings" HorizontalAlignment="Left" Margin="42,11,0,0" VerticalAlignment="Top" Grid.Column="0" Width="69" Foreground="Black" FontSize="16"/>
-      <Border x:Name="CanvasBorder" BorderBrush="Black" BorderThickness="3" Margin="38,40,36,467">
-         <Canvas HorizontalAlignment="Left" Margin="24,5,0,0" Width="270" Grid.Column="0" Height="235" VerticalAlignment="Top">
-            <Button x:Name="newRoundButton" Content="New round" Canvas.Left="158" Canvas.Top="188" Width="102" Height="40" FontSize="14" Click="newRoundClicked" />
-            <Button x:Name="resetButton" Content="Reset settings" Canvas.Left="10" Canvas.Top="188" Width="102" Height="40" FontSize="14"  Click="resetClicked"/>
-            <ComboBox x:Name="difficultyCombobox" Canvas.Left="10" Canvas.Top="22"  VerticalContentAlignment="Center" HorizontalContentAlignment ="Center"  Width="250" Height="36">
-               <ComboBoxItem Content="Easy" IsSelected="true">
-                  <ComboBoxItem.Tag>
-                     <sys:Double>0.40</sys:Double>
-                  </ComboBoxItem.Tag>
-               </ComboBoxItem>
-               <ComboBoxItem Content="Medium">
-                  <ComboBoxItem.Tag>
-                     <sys:Double>0.50</sys:Double>
-                  </ComboBoxItem.Tag>
-               </ComboBoxItem>
-               <ComboBoxItem Content="Hard">
-                  <ComboBoxItem.Tag>
-                     <sys:Double>0.60</sys:Double>
-                  </ComboBoxItem.Tag>
-               </ComboBoxItem>
-            </ComboBox>
-            <Label x:Name="label4" Content="Round time:" Canvas.Left="10" Canvas.Top="75" Foreground="Black"/>
-            <extToolkit:WatermarkTextBox Name="selectedTime_textbox" Height="26" TextWrapping="Wrap"  Width="54" Watermark="mm:ss" Text="05:00" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="95" Canvas.Top="75" TextChanged="timeTextBoxChanged" />
-            <Label x:Name="label4_Copy" Content="Opponent's setup time:" Canvas.Left="10" Canvas.Top="112" Foreground="Black"/>
-            <extToolkit:WatermarkTextBox x:Name="opponentSetupTime_textBox" Height="26" TextWrapping="Wrap"  Width="54" Watermark="mm:ss" Text="00:30" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="147" Canvas.Top="112" TextChanged="timeTextBoxChanged" />
-            <RadioButton x:Name="gi_radioButton" Content="Gi" Canvas.Left="16" Canvas.Top="153" Checked="gi_radioButton_Checked" IsChecked="True"/>
-            <RadioButton x:Name="nogi_radioButton" Content="NoGi" Canvas.Left="68" Canvas.Top="153" Checked="nogi_radioButton_Checked"/>
-         </Canvas>
-      </Border>
+        <Label x:Name="label1" Content="Settings" HorizontalAlignment="Left" Margin="42,11,0,0" VerticalAlignment="Top" Grid.Column="0" Width="69" Foreground="Black" FontSize="16"/>
+        <Border x:Name="CanvasBorder" BorderBrush="Black" BorderThickness="3" Margin="38,40,36,467">
+            <Canvas HorizontalAlignment="Left" Margin="24,5,0,0" Width="270" Grid.Column="0" Height="235" VerticalAlignment="Top">
+            <Button x:Name="newRoundButton" Style="{StaticResource StyleButton}" Content="New round" Canvas.Left="158" Canvas.Top="188" Width="102" Height="40" FontSize="14" Click="newRoundClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged" />
+            <Button x:Name="resetButton" Style="{StaticResource StyleButton}" Content="Reset settings" Canvas.Left="10" Canvas.Top="188" Width="102" Height="40" FontSize="14"  Click="resetClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
+                <ComboBox x:Name="difficultyCombobox" Canvas.Left="10" Canvas.Top="22"  VerticalContentAlignment="Center" HorizontalContentAlignment ="Center"  Width="250" Height="36">
+                    <ComboBoxItem Content="Easy" IsSelected="true">
+                        <ComboBoxItem.Tag>
+                            <sys:Double>0.40</sys:Double>
+                        </ComboBoxItem.Tag>
+                    </ComboBoxItem>
+                    <ComboBoxItem Content="Medium">
+                        <ComboBoxItem.Tag>
+                            <sys:Double>0.50</sys:Double>
+                        </ComboBoxItem.Tag>
+                    </ComboBoxItem>
+                    <ComboBoxItem Content="Hard">
+                        <ComboBoxItem.Tag>
+                            <sys:Double>0.60</sys:Double>
+                        </ComboBoxItem.Tag>
+                    </ComboBoxItem>
+                </ComboBox>
+                <Label x:Name="label4" Content="Round time:" Canvas.Left="10" Canvas.Top="75" Foreground="Black"/>
+                <extToolkit:WatermarkTextBox Name="selectedTime_textbox" Height="26" TextWrapping="Wrap"  Width="54" Watermark="mm:ss" Text="05:00" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="95" Canvas.Top="75" TextChanged="timeTextBoxChanged" />
+                <Label x:Name="label4_Copy" Content="Opponent's setup time:" Canvas.Left="10" Canvas.Top="112" Foreground="Black"/>
+                <extToolkit:WatermarkTextBox x:Name="opponentSetupTimeMin_textBox" Height="26" TextWrapping="Wrap"  Width="48" Watermark="mm:ss" Text="00:25" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="147" Canvas.Top="112" TextChanged="timeTextBoxChanged" />
+                <RadioButton x:Name="gi_radioButton" Content="Gi" Canvas.Left="16" Canvas.Top="153" Checked="gi_radioButton_Checked" IsChecked="True"/>
+                <RadioButton x:Name="nogi_radioButton" Content="NoGi" Canvas.Left="68" Canvas.Top="153" Checked="nogi_radioButton_Checked"/>
+                <Label x:Name="label2" Content="-" Foreground="Black" Canvas.Left="195" Canvas.Top="112"/>
+                <extToolkit:WatermarkTextBox x:Name="opponentSetupTimeMax_textBox" Height="26" TextWrapping="Wrap"  Width="49" Watermark="mm:ss" Text="00:30" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="210" Canvas.Top="112" TextChanged="timeTextBoxChanged" />
+            </Canvas>
+        </Border>
 
-      <Label x:Name="label" Content="Current position:" HorizontalAlignment="Left" Margin="42,396,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
-      <Label x:Name="currentPositionLabel" Content="-" HorizontalAlignment="Left" Margin="155,392,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green" RenderTransformOrigin="0.28,-0.235"/>
+        <Label x:Name="label" Content="Current position:" HorizontalAlignment="Left" Margin="42,396,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
+        <Label x:Name="currentPositionLabel" Content="-" HorizontalAlignment="Left" Margin="155,392,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green" RenderTransformOrigin="0.28,-0.235"/>
 
-      <Label x:Name="label_Copy" Content="Last technique:" HorizontalAlignment="Left" Margin="42,431,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
-      <Label x:Name="lastTechniqueLabel" Content="-" HorizontalAlignment="Left" Margin="150,427,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green"/>
+        <Label x:Name="label_Copy" Content="Last technique:" HorizontalAlignment="Left" Margin="42,431,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
+        <Label x:Name="lastTechniqueLabel" Content="-" HorizontalAlignment="Left" Margin="150,427,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green"/>
 
-      <Label x:Name="label_Copy2" Content="Opponent's position:" HorizontalAlignment="Left" Margin="42,481,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
-      <Label x:Name="opponentCurrentPositionLabel" Content="-" HorizontalAlignment="Left" Margin="180,477,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Red"/>
+        <Label x:Name="label_Copy2" Content="Opponent's position:" HorizontalAlignment="Left" Margin="42,481,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
+        <Label x:Name="opponentCurrentPositionLabel" Content="-" HorizontalAlignment="Left" Margin="180,477,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Red"/>
 
-      <Label x:Name="lbl" Content="Opponent's last technique:" HorizontalAlignment="Left" Margin="42,516,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
-      <Label x:Name="opponentLastTechniqueLabel" Content="-" HorizontalAlignment="Left" Margin="217,512,0,0" VerticalAlignment="Top" FontSize="18" Foreground="#FFD40E0E"/>
+        <Label x:Name="lbl" Content="Opponent's last technique:" HorizontalAlignment="Left" Margin="42,516,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
+        <Label x:Name="opponentLastTechniqueLabel" Content="-" HorizontalAlignment="Left" Margin="217,512,0,0" VerticalAlignment="Top" FontSize="18" Foreground="#FFD40E0E"/>
 
-      <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="Setup" IsEnabled="False" HorizontalAlignment="Left" Height="80" Margin="42,551,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
-      <extToolkit:WatermarkTextBox x:Name="helper_textBox" Watermark="Helper setup" IsEnabled="False" HorizontalAlignment="Left" Height="40" Margin="42,641,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
-      <extToolkit:WatermarkTextBox x:Name="helper_textBox2" Watermark="Helper setup" IsEnabled="False" HorizontalAlignment="Left" Height="43" Margin="42,691,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
+        <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="Setup" IsEnabled="False" HorizontalAlignment="Left" Height="80" Margin="42,551,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
+        <extToolkit:WatermarkTextBox x:Name="helper_textBox" Watermark="Helper setup" IsEnabled="False" HorizontalAlignment="Left" Height="40" Margin="42,641,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
+        <extToolkit:WatermarkTextBox x:Name="helper_textBox2" Watermark="Helper setup" IsEnabled="False" HorizontalAlignment="Left" Height="43" Margin="42,691,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
 
-      <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="8">
-         <GridSplitter.Template>
-            <ControlTemplate TargetType="{x:Type GridSplitter}">
-               <Grid>
-                  <Button Content="⁞" />
-                  <Rectangle Fill="#000000" />
-               </Grid>
-            </ControlTemplate>
-         </GridSplitter.Template>
-      </GridSplitter>
+        <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="8">
+            <GridSplitter.Template>
+                <ControlTemplate TargetType="{x:Type GridSplitter}">
+                    <Grid>
+                        <Button Content="⁞" />
+                        <Rectangle Fill="#000000" />
+                    </Grid>
+                </ControlTemplate>
+            </GridSplitter.Template>
+        </GridSplitter>
 
 
 
-      <Rectangle Grid.Column="2" Grid.RowSpan="1000">
-         <Rectangle.Fill>
-            <SolidColorBrush Color="Black" />
-         </Rectangle.Fill>
-      </Rectangle>
-      <TextBlock Grid.Column="2" Margin="358,41,344,553"><InlineUIContainer>
+        <Rectangle Grid.Column="2" Grid.RowSpan="1000">
+            <Rectangle.Fill>
+                <SolidColorBrush Color="Black" />
+            </Rectangle.Fill>
+        </Rectangle>
+        <TextBlock Grid.Column="2" Margin="358,41,344,553"><InlineUIContainer>
             <Image  Source="images/bjj-logo.png" Height="173" Width="198" />
          </InlineUIContainer></TextBlock>
-      <UniformGrid x:Name="buttonsGrid" Grid.Column="2">
+        <UniformGrid x:Name="buttonsGrid" Grid.Column="2">
 
-      </UniformGrid>
-      <Label x:Name="timer_label" Content="00:00" Grid.Column="2" HorizontalAlignment="Left" Margin="814,1,0,0" VerticalAlignment="Top" Foreground="Red" Height="38" Width="71" FontSize="24"/>
+        </UniformGrid>
+        <Label x:Name="timer_label" Content="00:00" Grid.Column="2" HorizontalAlignment="Left" Margin="814,1,0,0" VerticalAlignment="Top" Foreground="Red" Height="38" Width="71" FontSize="24"/>
 
-   </Grid>
+    </Grid>
 </Window>
