--- a/Jiu Jitsu Assistant/MindMaps.xaml
+++ b/Jiu Jitsu Assistant/MindMaps.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        xmlns:local="clr-namespace:Jiu_Jitsu_Assistant"
+        xmlns:local="clr-namespace:Jiu_Jitsu_Assistant"        
+        xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
         Title="MindMaps"       
         ResizeMode="NoResize"         
@@ -46,11 +47,14 @@
          </Canvas>
       </Border>
 
-      <TextBox x:Name="setup_textBox" HorizontalAlignment="Left" Height="91" Margin="42,622,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
+      <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="Setup"  HorizontalAlignment="Left" Height="80" Margin="42,646,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
       <Label x:Name="label" Content="Current position:" HorizontalAlignment="Left" Margin="42,533,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
       <Label x:Name="currentPositionLabel" Content="none" HorizontalAlignment="Left" Margin="155,529,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green" RenderTransformOrigin="0.28,-0.235"/>
       <Label x:Name="label_Copy" Content="Last technique:" HorizontalAlignment="Left" Margin="42,568,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
-      <Label x:Name="lastTechniqueLabel" Content="none" HorizontalAlignment="Left" Margin="150,564,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green"/>
+      <Label Width="214" HorizontalAlignment="Left" Foreground="Green" FontSize="18" Target="{Binding ElementName=lastTechniqueLabel}" Margin="150,568,0,125" >
+         <AccessText Name="lastTechniqueLabel" Text="-" TextWrapping="WrapWithOverflow" Width="209" Height="64">
+         </AccessText>
+      </Label>
 
 
       <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="8">
