--- a/Jiu Jitsu Assistant/ServerGameplay.xaml
+++ b/Jiu Jitsu Assistant/ServerGameplay.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Jiu_Jitsu_Assistant.Roll"
+﻿<Window x:Class="Jiu_Jitsu_Assistant.ServerGameplay"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"        
@@ -7,12 +7,12 @@
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Jiu_Jitsu_Assistant"
         mc:Ignorable="d"
-        Title="Roll"       
+        Title="ServerGameplay"       
         ResizeMode="NoResize"         
         Icon="/images/bjj-logo.png"
         Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
         Height="800px" Width="1300px"
-        Name="mindmaps_window">
+        Name="ServerGameplay_window">
    <Grid>
       <Grid.ColumnDefinitions>
          <ColumnDefinition Width="400"/>
@@ -23,9 +23,9 @@
       <Label x:Name="label1" Content="Settings" HorizontalAlignment="Left" Margin="42,11,0,0" VerticalAlignment="Top" Grid.Column="0" Width="69" Foreground="Black" FontSize="16"/>
       <Border x:Name="CanvasBorder" BorderBrush="Black" BorderThickness="3" Margin="38,40,36,467">
          <Canvas HorizontalAlignment="Left" Margin="24,5,0,0" Width="270" Grid.Column="0" Height="235" VerticalAlignment="Top">
-            <Button x:Name="newRoundButton" Style="{StaticResource StyleButton}" Content="New round" Canvas.Left="158" Canvas.Top="188" Width="102" Height="40" FontSize="14" Click="newRoundClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged" />
-            <Button x:Name="resetButton" Style="{StaticResource StyleButton}" Content="Reset settings" Canvas.Left="10" Canvas.Top="188" Width="102" Height="40" FontSize="14"  Click="resetClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
-            <ComboBox x:Name="difficultyCombobox" Canvas.Left="10" Canvas.Top="22"  VerticalContentAlignment="Center" HorizontalContentAlignment ="Center"  Width="250" Height="36">
+            <Button x:Name="newRoundButton" Style="{StaticResource StyleButton}" Content="New round" Canvas.Left="158" Canvas.Top="188" Width="102" Height="40" FontSize="14" Click="startNewGameplay" IsEnabledChanged="newRoundButton_IsEnabledChanged" />
+            <Button x:Name="resetButton" Style="{StaticResource StyleButton_Disabled}" IsEnabled="False" Content="Reset settings" Canvas.Left="10" Canvas.Top="188" Width="102" Height="40" FontSize="14" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
+            <ComboBox x:Name="difficultyCombobox" Canvas.Left="10" Canvas.Top="22"  VerticalContentAlignment="Center" HorizontalContentAlignment ="Center"  Width="250" Height="36" IsEnabled="False">
                <ComboBoxItem Content="Easy" IsSelected="true">
                   <ComboBoxItem.Tag>
                      <sys:Double>0.40</sys:Double>
@@ -43,13 +43,13 @@
                </ComboBoxItem>
             </ComboBox>
             <Label x:Name="label4" Content="Round time:" Canvas.Left="10" Canvas.Top="75" Foreground="Black"/>
-            <extToolkit:WatermarkTextBox Name="selectedTime_textbox" Height="26" TextWrapping="Wrap"  Width="54" Watermark="mm:ss" Text="05:00" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="95" Canvas.Top="75" TextChanged="timeTextBoxChanged" />
+            <extToolkit:WatermarkTextBox Name="selectedTime_textbox" Height="26" TextWrapping="Wrap"  Width="54" Watermark="mm:ss" Text="05:00" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="95" Canvas.Top="75" TextChanged="timeTextBoxChanged" IsEnabled="False"/>
             <Label x:Name="label4_Copy" Content="Opponent's setup time:" Canvas.Left="10" Canvas.Top="112" Foreground="Black"/>
-            <extToolkit:WatermarkTextBox x:Name="opponentSetupTimeMin_textBox" Height="26" TextWrapping="Wrap"  Width="48" Watermark="mm:ss" Text="00:25" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="147" Canvas.Top="112" TextChanged="timeTextBoxChanged" />
-            <RadioButton x:Name="gi_radioButton" Content="Gi" Canvas.Left="16" Canvas.Top="153" Checked="gi_radioButton_Checked" IsChecked="True"/>
-            <RadioButton x:Name="nogi_radioButton" Content="NoGi" Canvas.Left="68" Canvas.Top="153" Checked="nogi_radioButton_Checked"/>
+            <extToolkit:WatermarkTextBox x:Name="opponentSetupTimeMin_textBox" Height="26" TextWrapping="Wrap"  Width="48" Watermark="mm:ss" Text="00:25" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="147" Canvas.Top="106" TextChanged="timeTextBoxChanged" IsEnabled="False"/>
+            <RadioButton x:Name="gi_radioButton" Content="Gi" Canvas.Left="16" Canvas.Top="153" Checked="gi_radioButton_Checked" IsChecked="True" IsEnabled="False"/>
+            <RadioButton x:Name="nogi_radioButton" Content="NoGi" Canvas.Left="68" Canvas.Top="153" Checked="nogi_radioButton_Checked" IsEnabled="False"/>
             <Label x:Name="label2" Content="-" Foreground="Black" Canvas.Left="195" Canvas.Top="112"/>
-            <extToolkit:WatermarkTextBox x:Name="opponentSetupTimeMax_textBox" Height="26" TextWrapping="Wrap"  Width="49" Watermark="mm:ss" Text="00:30" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="210" Canvas.Top="112" TextChanged="timeTextBoxChanged" />
+            <extToolkit:WatermarkTextBox x:Name="opponentSetupTimeMax_textBox" Height="26" TextWrapping="Wrap"  Width="49" Watermark="mm:ss" Text="00:30" TextAlignment="Center" VerticalAlignment="Center" Canvas.Left="210" Canvas.Top="112" TextChanged="timeTextBoxChanged" IsEnabled="False"/>
          </Canvas>
       </Border>
 
@@ -69,9 +69,9 @@
          <AccessText Name="opponentLastTechniqueLabel" Text="-" TextWrapping="WrapWithOverflow" Width="147" Height="64"/>
       </Label>
 
-      <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="Setup" IsEnabled="False" HorizontalAlignment="Left" Height="80" Margin="42,550,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
-      <extToolkit:WatermarkTextBox x:Name="helper_textBox" Watermark="Helper setup" IsEnabled="False" HorizontalAlignment="Left" Height="40" Margin="42,640,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
-      <extToolkit:WatermarkTextBox x:Name="helper_textBox2" Watermark="Helper setup" IsEnabled="False" HorizontalAlignment="Left" Height="43" Margin="42,690,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
+      <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="Setup" HorizontalAlignment="Left" Height="80" Margin="42,550,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
+      <extToolkit:WatermarkTextBox x:Name="helper_textBox" Watermark="Helper setup" HorizontalAlignment="Left" Height="40" Margin="42,640,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
+      <extToolkit:WatermarkTextBox x:Name="helper_textBox2" Watermark="Helper setup" HorizontalAlignment="Left" Height="43" Margin="42,690,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0"/>
 
       <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="8">
          <GridSplitter.Template>
@@ -97,7 +97,8 @@
       <UniformGrid x:Name="buttonsGrid" Grid.Column="2">
 
       </UniformGrid>
-      <Label x:Name="timer_label" Content="00:00" Grid.Column="2" HorizontalAlignment="Left" Margin="814,1,0,0" VerticalAlignment="Top" Foreground="Red" Height="38" Width="71" FontSize="24"/>
+      <Label x:Name="timer_label" Content="05:00" Grid.Column="2" HorizontalAlignment="Left" Margin="814,1,0,0" VerticalAlignment="Top" Foreground="Red" Height="38" Width="71" FontSize="24"/>
+      <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="268,0,0,740" Width="75" Height="22" VerticalAlignment="Bottom" Click="button_Click"/>
 
    </Grid>
 </Window>
