client server communication works relatively fine but still messy, server ip in client, virtual opponent timer fix

--- a/Jiu Jitsu Assistant/App.xaml
+++ b/Jiu Jitsu Assistant/App.xaml
@@ -149,100 +149,100 @@
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_1" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#ffff00" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="#ffff00" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_1_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#FFFF7A" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#FFFF7A" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_2" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="Blue" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="Blue" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_2_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#8BBAFF" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#8BBAFF" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_3" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="DarkGray" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="DarkGray" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_3_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#ebebe0" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#ebebe0" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_4" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="Purple" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="Purple" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_4_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#FF91CA" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#FF91CA" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_5" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="Red" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="Red" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_5_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#FF9898" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#FF9898" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_6" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="Green" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="Green" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_6_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#96FF96" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#96FF96" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_7" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#00ffff" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="#00ffff" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_7_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#A2FDFD" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#A2FDFD" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_8" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#ff3300" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="#ff3300" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_8_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#ffebe6" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#ffebe6" Offset="1" />
       </LinearGradientBrush>
 
       <LinearGradientBrush x:Key="techniqueGroupGrad_9" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#993333" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="White" Offset="0.5" />
          <GradientStop Color="#993333" Offset="1" />
       </LinearGradientBrush>
       <LinearGradientBrush x:Key="techniqueGroupGrad_9_disabled" StartPoint="0,0" EndPoint="1,1">
          <GradientStop Color="#f9ecec" Offset="0" />
-         <GradientStop Color="#CCCCFF" Offset="0.5" />
+         <GradientStop Color="#FFB6B6CB" Offset="0.5" />
          <GradientStop Color="#f9ecec" Offset="1" />
       </LinearGradientBrush>
 
